Remove a bug where background flickers if theme was set to dark before

--- a/light-dark-mode/styles/style.css
+++ b/light-dark-mode/styles/style.css
@@ -69,10 +69,13 @@ a {
 .icon {
   width: 30px;
   cursor: pointer;
+  opacity: 1;
+  transition: all 0.6s;
 }
 
 .icon.hidden {
-  visibility: hidden;
+  transform: translateY(5px);
+  opacity: 0;
 }
 
 /* End theme switcher container */
